Reorganizing some chapters and fixed minor bugs

--- a/book.bib
+++ b/book.bib
@@ -1,3 +1,62 @@
+
+
+@Article{Quinn2017,
+  author =	 {Quinn, T.P. and Richardson, M.F. and Lovell, D. and
+                  Tamsyn M. Crowley},
+  title =	 {{\it propr}: An {R}-package for Identifying
+                  Proportionally Abundant Features Using Compositional
+                  Data Analysis},
+  journal =	 {Scientific Reports},
+  year =	 2017,
+  volume =	 7,
+  pages =	 16252,
+  doi =		 {10.1038/s41598-017-16520-0}
+}
+
+
+
+@Article{Kurtz2015,
+  author =	 {Kurtz, ZD and Müller, CL and Miraldi, ER and
+                  Littman, DR and Blaser, MJ and Bonneau RA},
+  title =	 {Sparse and Compositionally Robust Inference of
+                  Microbial Ecological Networks},
+  journal =	 {{PLoS Computational Biology}},
+  year =	 2015,
+  volume =	 11,
+  number =	 5,
+  pages =	 {e1004226},
+  annote =	 {SPIEC-EASI},  
+  doi =		 {10.1371/journal.pcbi.1004226}
+}
+
+  
+@Article{Shen2021,
+  author =	 {Yunyi Shen and Claudia Solis-Lemus},
+  title =	 {{CARlasso}: An {R} package for the estimation of sparse
+                  microbial networks with predictors},
+  journal =	 {{arXiv} preprint},
+  year =	 2021,
+  note =	 {arXiv:2107.13763 [stat.AP]},
+  url =		 {https://arxiv.org/abs/2107.13763}
+}
+
+
+@Article{Friedman2012,
+  author =	 {Friedman, J and Alm, EJ},
+  title =	 {Inferring Correlation Networks from Genomic Survey
+                  Data},
+  journal =	 {{PLoS Computational Biology}},
+  year =	 2012,
+  volume =	 8,
+  number =	 9,
+  pages =	 {e1002687},
+  annote =	 {SparCC},
+  doi =		 {10.1371/journal.pcbi.1002687}
+}
+
+
+
+
 @Article{Lahti2021bioc,
   author =	 {Leo Lahti, Felix G.M. Ernst, Sudarshan A. Shetty and
                   others},
